tests/ui/imports/issue-47623.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/issue-47623.rs:1:5
   |
LL | use self;
   |     ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0429`.
