tests/ui/imports/issue-47623.rs
use self; //~ERROR `self` imports are only allowed within a { } list

fn main() {}
